records importing and exporting works now

--- a/src/popup.html
+++ b/src/popup.html
@@ -15,7 +15,7 @@
   	<input type="button" value="Debug Records" id="bdr"><br>
   	<input type="button" value="Purify Records" id="bpr"><br>
   	<input type="button" value="Export Records" id="ber"><br>
-  	<input type="button" value="Import Records" id="bir">
+  	<span>Import Records</span><input type="file" value="Import Records" id="bir">
   </body>
 </html>
 
