added section ensure the twitch window is always present and sending messages

--- a/src/popup.html
+++ b/src/popup.html
@@ -8,7 +8,7 @@
 				overflow-x:hidden;
 			}
 		</style>
-		<script type="text/javascript" src="background.js"></script>
+		<script type="text/javascript" src="popup.js"></script>
 		<script type="text/javascript" src="lib/jquery.min.js"></script>
 		<script type="text/javascript" src="lib/RGraph.common.core.js" ></script>
 		<script type="text/javascript" src="lib/RGraph.scatter.js" ></script>
