added confidence score,  fixed importing bug

--- a/src/popup.html
+++ b/src/popup.html
@@ -41,6 +41,9 @@
 		<label>
 			<input type="checkbox" id="rb" checked>
 			rb</label>
+		<label>
+			<input type="checkbox" id="cs" checked>
+			cs</label>
 		<canvas id="cvs" width="400" height="250">
 			[No canvas support]
 		</canvas>
