genetic algorithm partially working

--- a/src/popup.html
+++ b/src/popup.html
@@ -30,20 +30,28 @@
 		<br>
 		<input type="button" value="Charts" id="bsc">
 		<label>
-			<input type="checkbox" id="ct" checked>
+			<input type="checkbox" id="ct">
 			ct</label>
 		<label>
-			<input type="checkbox" id="mw" checked>
+			<input type="checkbox" id="mw">
 			mw</label>
 		<label>
-			<input type="checkbox" id="mwc" checked>
+			<input type="checkbox" id="mwc">
 			mwc</label>
 		<label>
-			<input type="checkbox" id="rb" checked>
+			<input type="checkbox" id="rb">
 			rb</label>
 		<label>
 			<input type="checkbox" id="cs" checked>
 			cs</label>
+		<br>
+		<input type="button" value="Update Genetic Weights" id="ugw">
+		<input type="button" value="Reset Pool" id="rgw">
+		<br>
+		<label> M: 
+			<input type="text" name="msgbox" id="msgbox"/>
+		</label>
+
 		<canvas id="cvs" width="400" height="250">
 			[No canvas support]
 		</canvas>
