centralized some repeated code

--- a/src/popup.html
+++ b/src/popup.html
@@ -11,6 +11,7 @@
 				display:none;
 			}
 		</style>
+		<script type="text/javascript" src="records.js"></script>
 		<script type="text/javascript" src="strategy.js"></script>
 		<script type="text/javascript" src="popup.js"></script>
 		<script type="text/javascript" src="lib/jquery.min.js"></script>
