Added confidence measure to simulator

--- a/src/popup.html
+++ b/src/popup.html
@@ -49,6 +49,11 @@
 		<input type="button" value="Update Genetic Weights" id="ugw">
 		<input type="button" value="Reset Pool" id="rgw">
 		<br>
+		<span>Change Strategy</span>
+		<input type="button" value="O" id="cs_o">
+		<input type="button" value="CS" id="cs_cs">
+		<input type="button" value="RB" id="cs_rb">
+		<br>
 		<label> M: 
 			<input type="text" name="msgbox" id="msgbox"/>
 		</label>
