fixed bugs related to betting box

--- a/src/popup.html
+++ b/src/popup.html
@@ -45,6 +45,9 @@
 		<label>
 			<input type="checkbox" id="cs" checked>
 			cs</label>
+		<label>
+			<input type="checkbox" id="rc" checked>
+			rc</label>
 		<br>
 		<input type="button" value="Update Genetic Weights" id="ugw">
 		<input type="button" value="Reset Pool" id="rgw">
@@ -52,7 +55,9 @@
 		<span>Change Strategy</span>
 		<input type="button" value="O" id="cs_o">
 		<input type="button" value="CS" id="cs_cs">
-		<input type="button" value="RB" id="cs_rb">
+		<input type="button" value="RC" id="cs_rc">
+		<br>
+		<input type="button" value="Mass RC" id="mrc">
 		<br>
 		<label> M: 
 			<input type="text" name="msgbox" id="msgbox"/>
