extension now saves settings

--- a/src/popup.html
+++ b/src/popup.html
@@ -56,6 +56,7 @@
 		<input type="button" value="O" id="cs_o">
 		<input type="button" value="CS" id="cs_cs">
 		<input type="button" value="RC" id="cs_rc">
+		<input type="button" value="IPU" id="cs_ipu">
 		<br>
 		<input type="button" value="Mass RC" id="mrc">
 		<br>
