added a video toggle button

--- a/src/popup.html
+++ b/src/popup.html
@@ -59,6 +59,7 @@
 		<input type="button" value="IPU" id="cs_ipu">
 		<br>
 		<input type="button" value="Mass RC" id="mrc">
+		<input type="button" value="Toggle Video" id="tv">
 		<br>
 		<label> M: 
 			<input type="text" name="msgbox" id="msgbox"/>
