upgraded player stat printing options

--- a/src/popup.html
+++ b/src/popup.html
@@ -22,8 +22,8 @@
 		<h1>SaltBot Controls</h1>
 		<span id="player1" value="1337">These are here for compatibility</span>
 		<span id="player2" value="1337">with records.js.</span>
-		<input type="button" value="Debug Records" id="bdr">
-		<input type="button" value="Purify Records" id="bpr">
+		<input type="button" value="Players by %" id="bdr">
+		<input type="button" value="Players by $" id="bpr">
 		<br>
 		<input type="button" value="Export Records" id="ber">
 		<span>Import Records</span>
