fixed records import bug

--- a/src/popup.html
+++ b/src/popup.html
@@ -85,7 +85,7 @@
 			Export Records
 		</div>
 		<div id="bir" class="click smalltx" style="position: relative; width: 93px;">
-			<input type="file" style="position: absolute; top: 5px; left:5px ; opacity:0; z-index: 2;cursor: pointer;">
+			<input type="file" id="upload" style="position: absolute; top: 5px; left:5px ; opacity:0; z-index: 2;cursor: pointer;">
 			<span style="position: absolute; top: 5px; left:3px ;">Import Records</span>
 		</div>
 		<h2 class="subheading">Player Rankings</h2>
