--- a/src/popup.html
+++ b/src/popup.html
@@ -8,22 +8,26 @@
 				overflow-x: hidden;
 				min-height: 600px;
 				overflow-y: hidden;
-				background-color: #DBEADB;
-			}
+                background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#fcfff4), color-stop(40%,#dfe5d7), color-stop(100%,#b3bead));
+            }
 			#player1, #player2 {
 				display: none;
 			}
+
 			.click {
-				background-color: #4D944D;
-				font-weight: bold;
+                border:2px solid #79c127;
+                -webkit-border-radius: 3px; -moz-border-radius: 3px;border-radius: 3px;font-size:12px;font-family:arial black, sans-serif; padding: 10px 10px 10px 10px; text-decoration:none; display:inline-block;text-shadow: 2px 2px 0 rgba(0,0,0,0.3);font-weight:bold; color: #FFFFFF;
+                background-color: #95DA46; background-image: -webkit-gradient(linear, left top, left bottom, from(#95DA46), to(#3DB33D));
+                background-image: -webkit-linear-gradient(top, #95DA46, #3DB33D);
+
 				font-size: medium;
 				color: white;
 				padding: 4px;
 				text-align: center;
 				min-width: 50px;
 				max-width: 100px;
-				border: 5px solid #006600;
-				border-radius: 10px;
+
+				border-radius: 5px;
 				margin: 5px;
 				float: left;
 				cursor: pointer;
@@ -31,12 +35,11 @@
 				height: 20px;
 			}
 			.click:hover {
-				background-color: #8CBB4D
-			}
+                border:2px solid #619b1f;
+                background-color: #7cc528; background-image: -webkit-gradient(linear, left top, left bottom, from(#7cc528), to(#308d30));
+                background-image: -webkit-linear-gradient(top, #7cc528, #308d30);
+            }
 
-			.click:active {
-				background-color: #00FF00;
-			}
 			.smalltx {
 				max-width: 200px;
 				font-size: small;
@@ -75,7 +78,7 @@
 		<div id="ugw" class="click smalltx">
 			Update Genetic Weights
 		</div>
-		<div id="rgw" class="click">
+		<div id="rgw" class="click smalltx">
 			Reset Pool
 		</div>
 		<label style="display: block;clear: both;"> Messages:
@@ -85,15 +88,15 @@
 		<div id="ber" class="click smalltx">
 			Export Records
 		</div>
-		<div id="bir" class="click smalltx" style="position: relative; width: 93px;">
+		<div id="bir" class="click smalltx" style="position: relative; width: 110px;">
 			<input type="file" id="upload" style="position: absolute; top: 5px; left:5px ; opacity:0; z-index: 2;cursor: pointer;">
 			<span style="position: absolute; top: 5px; left:3px ;">Import Records</span>
 		</div>
 		<h2 class="subheading">Player Rankings</h2>
-		<div id="bdr" class="click">
+		<div id="bdr" class="click smalltx">
 			Players by %
 		</div>
-		<div id="bpr" class="click">
+		<div id="bpr" class="click smalltx">
 			Players by $
 		</div>
 		<h2 class="subheading">Options</h2>
@@ -104,7 +107,7 @@
 			Toggle Aggro
 		</div>
 		<h2 class="subheading">Developer</h2>
-		<div id="mrc" class="click" >
+		<div id="mrc" class="click smalltx" >
 			Mass RC
 		</div>
 		<div id="bsc" class="click smalltx">
@@ -112,10 +115,10 @@
 		</div><label style="visibility: hidden;">
 			<input type="checkbox" id="rb">
 			rb</label>
-		<label>
+		<label style="visibility: hidden;">
 			<input type="checkbox" id="cs" checked>
 			cs</label>
-		<label>
+        <label style="visibility: hidden;">
 			<input type="checkbox" id="rc" checked>
 			rc</label>
 		<br>
