Added functionality for exporting and importing chromosomes
The popup.html had to be changed a bit because the maximum height of
popups is 600 px. If the Developer header is left it needs more than 600
px height.

toJSON() is called when JSON.stringify() is called which leads to an
endless loop. Either rename the function or just leave it removed as
it's not used anywhere.

--- a/src/popup.html
+++ b/src/popup.html
@@ -4,7 +4,7 @@
 		<title>SaltBot Controls</title>
 		<style>
 			body {
-				min-width: 300px;
+				min-width: 350px;
 				overflow-x: hidden;
 				min-height: 600px;
 				overflow-y: hidden;
@@ -89,8 +89,16 @@
 			Export Records
 		</div>
 		<div id="bir" class="click smalltx" style="position: relative; width: 110px;">
-			<input type="file" id="upload" style="position: absolute; top: 5px; left:5px ; opacity:0; z-index: 2;cursor: pointer;">
+			<input type="file" id="upload_r" style="position: absolute; top: 0px; left:0px ; opacity:0; z-index: 2;cursor: pointer;width: 118px;height: 30px">
 			<span style="position: absolute; top: 5px; left:3px ;">Import Records</span>
+		</div>
+		<h2 class="subheading">Chromosomes</h2>
+		<div id="bec" class="click smalltx">
+			Export Chromosomes
+		</div>
+		<div id="bic" class="click smalltx" style="position: relative; width: 155px">
+			<input type="file" id="upload_c" style="position: absolute; top: 0px; left:0px ; opacity:0; z-index: 2;cursor: pointer;width: 163px;height: 30px">
+			<span style="position: absolute; top: 5px; left:3px ;">Import Chromosomes</span>
 		</div>
 		<h2 class="subheading">Player Rankings</h2>
 		<div id="bdr" class="click smalltx">
@@ -106,7 +114,9 @@
 		<div id="ta" class="click smalltx" >
 			Toggle Aggro
 		</div>
-		<h2 class="subheading">Developer</h2>
+		<br />
+		<br />
+		<br />
 		<div id="mrc" class="click smalltx" >
 			Mass RC
 		</div>
@@ -121,7 +131,7 @@
         <label style="visibility: hidden;">
 			<input type="checkbox" id="rc" checked>
 			rc</label>
-		<br>
+		<br />
 	</body>
 </html>
 
