--- a/src/popup.html
+++ b/src/popup.html
@@ -114,6 +114,18 @@
 		<div id="ta" class="click smalltx" >
 			Toggle Aggro
 		</div>
+		<div id="te" class="click smalltx" >
+			Toggle Exhibitions
+		</div>
+		<br />
+		<br />
+		<br />
+		<br />
+		<br />
+		<br />
+		<div>
+		<input id="tl" type="checkbox"/> Stop at <input id="limit" type="number" min="1000" value="10000"/>
+		</div>
 	</body>
 </html>
 
