Added github and help buttons, fixed months in downloaded file names
The popup now features 2 buttons linking to the saltbot guide and the
github page as only a few people know about it.

I forgot some parenthesis around the month so + 1 would be treated as
addition, not concatenation.

--- a/src/popup.html
+++ b/src/popup.html
@@ -57,6 +57,10 @@
 		<script type="text/javascript" src="popup.js"></script>
 	</head>
 	<body>
+		<div style="position:absolute;top:20px;right:20px;">
+		<a href="http://explosionduck.com/wp/so-you-want-to-use-saltbot/"><img src="./help.png" /></a>
+		<a href="https://github.com/synkarius/saltbot"><img src="./github.png" /></a>
+		</div>
 		<h1>SaltBot Controls</h1>
 		<span id="player1" value="1337">These are here for compatibility</span>
 		<span id="player2" value="1337">with records.js.</span>
