Added a searchable, sortable matchup table
Click on the table icon in the menu to see the table. All matches are
duplicated and mirrored and can be searched by character 1 and date.

--- a/src/popup.html
+++ b/src/popup.html
@@ -58,8 +58,9 @@
 	</head>
 	<body>
 		<div style="position:absolute;top:20px;right:20px;">
-		<a href="http://explosionduck.com/wp/so-you-want-to-use-saltbot/"><img src="./help.png" /></a>
-		<a href="https://github.com/synkarius/saltbot"><img src="./github.png" /></a>
+		<a href="http://explosionduck.com/wp/so-you-want-to-use-saltbot/"><img src="./images/help.png" /></a>
+		<a href="https://github.com/synkarius/saltbot"><img src="./images/github.png" /></a>
+		<a href="./matchdata.html"><img src="./images/table.png" /></a>
 		</div>
 		<h1>SaltBot Controls</h1>
 		<span id="player1" value="1337">These are here for compatibility</span>
