Added markup for winners in the match datatable
Winners are now marked with a green color.

--- a/src/matchdata.html
+++ b/src/matchdata.html
@@ -8,6 +8,9 @@
 	<script src="matchdata.js"></script>
 	
 	<link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.11/css/jquery.dataTables.min.css">
+	<style>
+      td.highlight { background-color: lightgreen !important; }
+    </style>
 	</head>
 	<body>
 	<p id="loading">Processing the data, please wait.</p>
