--- a/src/matchdata.html
+++ b/src/matchdata.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html>
 	<head>
+	<title>Recorded match data</title>
 	<script src="lib/jquery.min.js"></script>
 	<script src="lib/jquery.dataTables.min.js"></script>
 	<script src="lib/date.js"></script>
