--- a/src/popup.html
+++ b/src/popup.html
@@ -1,136 +1,137 @@
 <!doctype html>
 <html>
-	<head>
-		<title>SaltBot Controls</title>
-		<style>
-			body {
-				min-width: 315px;
-				overflow-x: hidden;
-				min-height: 500px;
-				overflow-y: hidden;
-                background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#fcfff4), color-stop(40%,#dfe5d7), color-stop(100%,#b3bead));
-            }
-			#player1, #player2 {
-				display: none;
-			}
+<head>
+	<title>SaltBot Controls</title>
+	<style>
+		body {
+			min-width: 315px;
+			overflow-x: hidden;
+			min-height: 500px;
+			overflow-y: hidden;
+			background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #fcfff4), color-stop(40%, #dfe5d7), color-stop(100%, #b3bead));
+		}
 
-			.click {
-                border:2px solid #79c127;
-                -webkit-border-radius: 3px; -moz-border-radius: 3px;border-radius: 3px;font-size:12px;font-family:arial black, sans-serif; padding: 10px 10px 10px 10px; text-decoration:none; display:inline-block;text-shadow: 2px 2px 0 rgba(0,0,0,0.3);font-weight:bold; color: #FFFFFF;
-                background-color: #95DA46; background-image: -webkit-gradient(linear, left top, left bottom, from(#95DA46), to(#3DB33D));
-                background-image: -webkit-linear-gradient(top, #95DA46, #3DB33D);
+		#player1, #player2 {
+			display: none;
+		}
 
-				font-size: medium;
-				color: white;
-				padding: 4px;
-				text-align: center;
-				min-width: 50px;
-				max-width: 100px;
+		.click {
+			border: 2px solid #79c127;
+			-webkit-border-radius: 3px;
+			-moz-border-radius: 3px;
+			border-radius: 3px;
+			font-size: 12px;
+			font-family: arial black, sans-serif;
+			padding: 10px 10px 10px 10px;
+			text-decoration: none;
+			display: inline-block;
+			text-shadow: 2px 2px 0 rgba(0, 0, 0, 0.3);
+			font-weight: bold;
+			color: #FFFFFF;
+			background-color: #95DA46;
+			background-image: -webkit-gradient(linear, left top, left bottom, from(#95DA46), to(#3DB33D));
+			background-image: -webkit-linear-gradient(top, #95DA46, #3DB33D);
 
-				border-radius: 5px;
-				margin: 5px;
-				float: left;
-				cursor: pointer;
-				-webkit-user-select: none;
-				height: 20px;
-			}
-			.click:hover {
-                border:2px solid #619b1f;
-                background-color: #7cc528; background-image: -webkit-gradient(linear, left top, left bottom, from(#7cc528), to(#308d30));
-                background-image: -webkit-linear-gradient(top, #7cc528, #308d30);
-            }
+			font-size: medium;
+			color: white;
+			padding: 4px;
+			text-align: center;
+			min-width: 50px;
+			max-width: 100px;
 
-			.smalltx {
-				max-width: 200px;
-				font-size: small;
-				padding-top: 7px;
-				padding-bottom: 3px;
-			}
-			.subheading {
-				margin-bottom: 5px;
-				clear: both;
-			}
-		</style>
-		<script type="text/javascript" src="records.js"></script>
-		<script type="text/javascript" src="strategy.js"></script>
-		<script type="text/javascript" src="lib/jquery.min.js"></script>
-		<script type="text/javascript" src="popup.js"></script>
-	</head>
-	<body>
-		<div style="position:absolute;top:20px;right:20px;">
-		<a href="http://explosionduck.com/wp/so-you-want-to-use-saltbot/"><img src="./images/help.png" /></a>
-		<a href="https://github.com/synkarius/saltbot"><img src="./images/github.png" /></a>
-		<a href="./matchdata.html"><img src="./images/table.png" /></a>
-		</div>
-		<h1>SaltBot Controls</h1>
-		<span id="player1" value="1337">These are here for compatibility</span>
-		<span id="player2" value="1337">with records.js.</span>
+			border-radius: 5px;
+			margin: 5px;
+			float: left;
+			cursor: pointer;
+			-webkit-user-select: none;
+			height: 20px;
+		}
 
-		<h2 class="subheading">Change Mode</h2>
-		<div id="cs_o" class="click smalltx">
-			Monk
-		</div>
-		<div id="cs_cs" class="click smalltx">
-			Scientist
-		</div>
-		<div id="cs_rc" class="click smalltx">
-			Cowboy
-		</div>
-		<div id="cs_ipu" class="click smalltx">
-			Lunatic
-		</div>
-		<h2 class="subheading">Chromosomes Management</h2>
-		<div id="ugw" class="click smalltx">
-			Update Genetic Weights
-		</div>
-		<div id="rgw" class="click smalltx">
-			Reset Pool
-		</div>
-		<div id="bec" class="click smalltx">
-			Export
-		</div>
-		<div id="bic" class="click smalltx" style="position: relative; width: 45px">
-			<input type="file" id="upload_c" style="display: none">
-			<span style="position: absolute; top: 5px; left:3px ;">Import</span>
-		</div>
-		<br>
-		<label style="display: block;clear: both;"> Messages:
-			<input type="text" name="msgbox" id="msgbox"/>
-		</label>
-		<h2 class="subheading">Records Management</h2>
-		<div id="ber" class="click smalltx">
-			Export
-		</div>
-		<div id="bir" class="click smalltx" style="position: relative; width: 45px;">
-			<input type="file" id="upload_r" style="display: none">
-			<span id="text_upload_r" style="position: absolute; top: 5px; left:3px ;">Import</span>
-		</div>
-		<h2 class="subheading">Player Rankings</h2>
-		<div id="bdr" class="click smalltx">
-			Players by %
-		</div>
-		<div id="bpr" class="click smalltx">
-			Players by $
-		</div>
-		<h2 class="subheading">Options</h2>
-		<div id="tv" class="click smalltx" >
-			Toggle Video
-		</div>
-		<div id="ta" class="click smalltx" >
-			Toggle Aggro
-		</div>
-		<div id="te" class="click smalltx" >
-			Toggle Exhibitions
-		</div>
-		<br />
-		<br />
-		<br />
-		<br />
-		<br />
-		<br />
-		<div>
-		<input id="tl" type="checkbox"/> Stop at <input id="limit" type="number" min="1000" value="10000"/>
-		</div>
-	</body>
+		.click:hover {
+			border: 2px solid #619b1f;
+			background-color: #7cc528;
+			background-image: -webkit-gradient(linear, left top, left bottom, from(#7cc528), to(#308d30));
+			background-image: -webkit-linear-gradient(top, #7cc528, #308d30);
+		}
+
+		.smalltx {
+			max-width: 200px;
+			font-size: small;
+			padding-top: 7px;
+			padding-bottom: 3px;
+		}
+
+		.subheading {
+			margin-bottom: 5px;
+			clear: both;
+		}
+	</style>
+	<script type="text/javascript" src="records.js"></script>
+	<script type="text/javascript" src="strategy.js"></script>
+	<script type="text/javascript" src="lib/jquery.min.js"></script>
+	<script type="text/javascript" src="popup.js"></script>
+</head>
+<body>
+<div style="position:absolute;top:20px;right:20px;">
+	<a href="http://explosionduck.com/wp/so-you-want-to-use-saltbot/"><img src="./images/help.png"/></a>
+	<a href="https://github.com/synkarius/saltbot"><img src="./images/github.png"/></a>
+	<a href="./config.html"><img src="./images/config.png"/></a>
+	<a href="./matchdata.html"><img src="./images/table.png"/></a>
+</div>
+<h1>SaltBot Controls</h1>
+<span id="player1" value="1337">These are here for compatibility</span>
+<span id="player2" value="1337">with records.js.</span>
+
+<h2 class="subheading">Change Mode</h2>
+<div id="cs_o" class="click smalltx">
+	Monk
+</div>
+<div id="cs_cs" class="click smalltx">
+	Scientist
+</div>
+<div id="cs_rc" class="click smalltx">
+	Cowboy
+</div>
+<div id="cs_ipu" class="click smalltx">
+	Lunatic
+</div>
+<h2 class="subheading">Chromosomes Management</h2>
+<div id="ugw" class="click smalltx">
+	Update Genetic Weights
+</div>
+<div id="rgw" class="click smalltx">
+	Reset Pool
+</div>
+<div id="bec" class="click smalltx">
+	Export
+</div>
+<div id="bic" class="click smalltx" style="position: relative; width: 45px">
+	<input type="file" id="upload_c" style="display: none">
+	<span style="position: absolute; top: 5px; left:3px ;">Import</span>
+</div>
+<br>
+<label style="display: block;clear: both;"> Messages:
+	<input type="text" name="msgbox" id="msgbox"/>
+</label>
+<h2 class="subheading">Records Management</h2>
+<div id="ber" class="click smalltx">
+	Export
+</div>
+<div id="bir" class="click smalltx" style="position: relative; width: 45px;">
+	<input type="file" id="upload_r" style="display: none">
+	<span id="text_upload_r" style="position: absolute; top: 5px; left:3px ;">Import</span>
+</div>
+
+<h2 class="subheading">Options</h2>
+<div id="tv" class="click smalltx">
+	Toggle Video
+</div>
+<div id="ta" class="click smalltx">
+	Toggle Aggro
+</div>
+<div class="subheading">
+	<input id="tl" type="checkbox"/> Stop at <input id="limit" type="number" min="1000" value="10000"/>
+</div>
+</body>
 </html>
 
