Fixed exhibition tiers and commas in character names
Fixes #88.

For exhibitions the tier is set to U again if no tier was found in the
waifu message.

Commas are now also replaced in the waifu4u parser.
Made config.html HTML5-conform.

Swapped the log messages of team match and exhibition deactivated so the
messages can be grouped to 25 exhibition deactivated log messages in the
console log.

--- a/src/config.html
+++ b/src/config.html
@@ -1,3 +1,4 @@
+<!doctype html>
 <html>
 <head>
 	<title>Saltbot Configuration</title>
@@ -9,7 +10,7 @@
 </head>
 <body id="public">
 <div id="container">
-	<form class="wufoo" action method>
+	<form class="wufoo">
 		<img src="images/48.png" alt="Saltbot icon" id="saltbot-icon"/>
 		<h1>Saltbot Configuration</h1>
 		<h2>Exhibition betting</h2>
