initial commit saltbot gui changes
changed wording of monk mode limit

begin adding agressive mode betting limit

--- a/src/popup.html
+++ b/src/popup.html
@@ -125,11 +125,12 @@
 <div id="tv" class="click smalltx">
 	Toggle Video
 </div>
-<div id="ta" class="click smalltx">
-	Toggle Aggro
+<h2 class="subheading">Betting Controls</h2>
+<div class="subheading">
+	<input id="ta" type="checkbox"/>Agressive betting up to <input id="talimit" type="number" min="0" value="10000"/>
 </div>
 <div class="subheading">
-	<input id="tl" type="checkbox"/> Stop at <input id="limit" type="number" min="1000" value="10000"/>
+	<input id="tl" type="checkbox"/> Switch to monk at <input id="limit" type="number" min="1000" value="10000"/>
 </div>
 </body>
 </html>
