--- a/src/popup.html
+++ b/src/popup.html
@@ -63,6 +63,13 @@
 		.subheading {
 			margin-bottom: 5px;
 			clear: both;
+
+		}
+		
+		.subheading input {
+			width:60px;
+			display: inline-block;
+			vertical-align: middle;
 		}
 	</style>
 	<script type="text/javascript" src="records.js"></script>
