--- a/src/popup.html
+++ b/src/popup.html
@@ -137,7 +137,7 @@
 	<input id="ta" type="checkbox"/>Agressive betting up to <input id="talimit" type="number" min="0" value="10000"/>
 </div>
 <div class="subheading">
-	<input id="tl" type="checkbox"/> Switch to monk at <input id="limit" type="number" min="1000" value="10000"/>
+	<input id="tl" type="checkbox"/> Stop betting at <input id="limit" type="number" min="1000" value="10000"/>
 </div>
 </body>
 </html>
