--- a/src/popup.html
+++ b/src/popup.html
@@ -65,11 +65,8 @@
 			clear: both;
 
 		}
-		
-		.subheading input {
-			width:60px;
-			display: inline-block;
-			vertical-align: middle;
+		input[type="number"] {
+		   width:100px;
 		}
 	</style>
 	<script type="text/javascript" src="records.js"></script>
@@ -133,12 +130,19 @@
 	Toggle Video
 </div>
 <h2 class="subheading">Betting Controls</h2>
-<div class="subheading">
-	<input id="ta" type="checkbox"/>Agressive betting up to <input id="talimit" type="number" min="0" value="10000"/>
-</div>
-<div class="subheading">
-	<input id="tl" type="checkbox"/> Stop betting at <input id="limit" type="number" min="1000" value="10000"/>
-</div>
+<table>
+	<tr>
+		<td><input id="ta" type="checkbox"/></td>
+		<td> Agressive betting up to </td>
+		<td><input id="talimit" type="number" min="1000" value="10000"/></td>
+	</tr>
+
+	<tr>
+		<td><input id="tl" type="checkbox"/></td>
+		<td> Stop betting at </td>
+		<td><input id="limit" type="number" min="1000" value="10000"/></td>
+	</tr>
+</table>
 </body>
 </html>
 
