--- a/src/popup.html
+++ b/src/popup.html
@@ -142,6 +142,11 @@
 		<td> Stop betting at </td>
 		<td><input id="limit" type="number" min="1000" value="10000"/></td>
 	</tr>
+	<tr>
+		<td/><td><input type="range" id="multiplierSlider" value="1.0" min="0.1" max="10" step="0.1"><br />
+		 Betting multiplier</td>
+		<td><input type="number" id="multiplierField" value="1.0" disabled /></td>
+	</tr>
 </table>
 </body>
 </html>
