--- a/src/popup.html
+++ b/src/popup.html
@@ -133,7 +133,7 @@
 <table>
 	<tr>
 		<td><input id="ta" type="checkbox"/></td>
-		<td> Agressive betting up to </td>
+		<td> Aggressive betting up to </td>
 		<td><input id="talimit" type="number" min="1000" value="10000"/></td>
 	</tr>
 
