Added keep alive option in config page to restore crashed saltybet tabs.
Related to #113

--- a/src/config.html
+++ b/src/config.html
@@ -23,6 +23,10 @@
 			<input id="ctl" type="checkbox"/>Stop at tourney balance <input id="tourney-limit" type="number" min="1000"
 			                                                                value="100000"/>
 		</p>
+		<h2>Keep alive</h2>
+		<p>
+			<input type="checkbox" id="toggleKeepAlive"/>Restore crashed or closed saltybet tabs
+		</p>
 		<h2>Display Player Rankings</h2>
 		<p>
 			<input type="radio" name="rankings" id="bdr"/>Players by %
