Fixed missing utils.js in popup. #151
Also removed some logging because chromosome calculations took way too long.

--- a/src/popup.html
+++ b/src/popup.html
@@ -2,9 +2,10 @@
 <html>
 <head>
 	<title>SaltBot Controls</title>
+	<script type="text/javascript" src="lib/jquery.min.js"></script>
+	<script type="text/javascript" src="utils.js"></script>
 	<script type="text/javascript" src="records.js"></script>
 	<script type="text/javascript" src="strategy.js"></script>
-	<script type="text/javascript" src="lib/jquery.min.js"></script>
 	<script type="text/javascript" src="popup.js"></script>
 	<link rel="stylesheet" href="css/obvious-buttons.css"/>
 	<style>
