--- a/src/popup.html
+++ b/src/popup.html
@@ -27,21 +27,23 @@
 			clear: both;
 			margin-top: 8px;
 		}
+
 		input[type="number"] {
-			 width:100px;
+			width: 100px;
 		}
-		
+
 		.btn {
 			margin-bottom: 5px;
 			-webkit-touch-callout: none; /* iOS Safari */
 			-webkit-user-select: none; /* Safari */
-			 -khtml-user-select: none; /* Konqueror HTML */
-				 -moz-user-select: none; /* Firefox */
-				-ms-user-select: none; /* Internet Explorer/Edge */
-					user-select: none; /* Non-prefixed version, currently
-											supported by Chrome and Opera */
+			-khtml-user-select: none; /* Konqueror HTML */
+			-moz-user-select: none; /* Firefox */
+			-ms-user-select: none; /* Internet Explorer/Edge */
+			user-select: none;
+			/* Non-prefixed version, currently
+													   supported by Chrome and Opera */
 		}
-		
+
 		.btn.active {
 			color: black;
 		}
@@ -80,7 +82,7 @@
 <div id="rgw" class="btn btn-inline btn-small btn-success">
 	Reset Pool
 </div>
-<br />
+<br/>
 <div id="bec" class="btn btn-inline btn-small btn-success">
 	Export
 </div>
@@ -109,19 +111,21 @@
 <table>
 	<tr>
 		<td><input id="ta" type="checkbox"/></td>
-		<td> Aggressive betting up to </td>
+		<td> Aggressive betting up to</td>
 		<td><input id="talimit" type="number" min="1000" value="10000"/></td>
 	</tr>
 
 	<tr>
 		<td><input id="tl" type="checkbox"/></td>
-		<td> Stop betting at </td>
+		<td> Stop betting at</td>
 		<td><input id="limit" type="number" min="1000" value="10000"/></td>
 	</tr>
 	<tr>
-		<td/><td><input type="range" id="multiplierSlider" value="1.0" min="0.1" max="10" step="0.1"><br />
-		 Betting multiplier</td>
-		<td><input type="number" id="multiplierField" value="1.0" disabled /></td>
+		<td/>
+		<td><input type="range" id="multiplierSlider" value="1.0" min="0.1" max="10" step="0.1"><br/>
+			Betting multiplier
+		</td>
+		<td><input type="number" id="multiplierField" value="1.0" disabled/></td>
 	</tr>
 </table>
 </body>
